Update documentation to reflect database integration and system architecture improvements